# cvd

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
config/: config.json
data/: data_index.json
data/notifications/: history.json
data/processed/: sen001.csv  sen002.csv  sen003.csv  sen004.csv
data/raw/: sen001.csv  sen002.csv  sen003.csv
docs/: architecture.md  examples.md  full_class_diagram.mmd  notification_center.md  test_setup.md  utils_services.md
legacy_sensors/algorithms/: reactor_state.py
legacy_stuff/: application.py  arduino_tc_sensor.py
legacy_stuff/config/: default_config.json
legacy_stuff/gui_native/: application.py
program/: main.py
program/arduino/: control_arduino_tc_board.py
program/config/: config.json  default_config.json  simple_config.json
program/src/: __init__.py
scripts/: email_alert_service_testing.py  generate_uml.py  test_email_alert_service.py  update_requirements.py
src/: __init__.py  experiment_manager.py  main.py
src/config/: default_config.json  simple_config.json
src/controllers/: README.md  camera_utils.py  controller_base.py  controller_manager.py  controller_registry.py  roi_utils.py
src/core/: email_alert_service.py  experiment_manager.py
tests/: README_test_alt_gui.md  conftest.py  test_algorithm_config_service.py  test_alt_application_roi.py  test_alt_gui.py  test_apply_uvc_settings.py  test_arduino_sensor.py  test_async_utils.py  test_base_camera_capture.py  test_camera_capture.py  test_camera_toggle_tasks.py  test_capture_task_single.py  test_component_registry.py  test_compression.py  test_config_validation.py  test_controller_config_service.py  test_controller_manager_create.py  test_controller_parallel.py  test_controller_setup_wizard_reset_type.py  test_controller_setup_wizard_webcam.py  test_controller_setup_wizard_webcams.py  test_controller_uptime.py  test_dashboard_camera.py  test_dashboard_controller_cards.py  test_dashboard_system_status.py  test_data_cleaner.py  test_data_files_list.py  test_data_filter_panel.py  test_data_manager.py  test_data_saver.py  test_data_saver_flush_interval.py  test_email_alert_and_file_maintenance.py  test_email_alert_section_defaults.py  test_email_alert_service_init.py  test_email_alert_service_script.py  test_email_alert_wizard_validation.py  test_email_anonymization.py  test_experiment_component_wizard_callback.py  test_experiment_history_table.py  test_experiment_manager.py  (+38 more)
(+276 files in other folders)
