[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cvd"
version = "0.1.0"
dependencies = [
    "plotly",
    "nicegui",
    "numpy",
    "pyserial",
    "opencv-python",
    "Pillow",
    "pytest",
    "pytest-asyncio",
    "watchdog",
    "jsonschema",
    "setuptools",
    "types-jsonschema",
    "types-setuptools",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
