[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cvd"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "plotly",
    "nicegui",
    "numpy",
    "pyserial",
    "opencv-python",
    "Pillow",
    "watchdog",
    "jsonschema",
    "setuptools",
    "types-jsonschema",
    "types-setuptools",
    "psutil",
]

[project.entry-points."cvd.sensors"]
arduino_tc_board = "src.data_handler.sources.sensors.arduino_tc_sensor:ArduinoTCSensor"
rs232 = "src.data_handler.sources.sensors.rs232_sensor:RS232Sensor"
mock_arduino_tc_board = "src.data_handler.sources.mock_sensors:MockArduinoTCSensor"
mock_rs232 = "src.data_handler.sources.mock_sensors:MockRS232Sensor"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
