[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cvd"
version = "0.1.0"
description = "Application for collecting sensor data, processing it with controllers and displaying results through a NiceGUI interface"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "plotly",
    "nicegui",
    "numpy",
    "pyserial",
    "opencv-python",
    "Pillow",
    "watchdog",
    "jsonschema",
    "setuptools",
    "types-jsonschema",
    "types-setuptools",
    "psutil",
]

[project.entry-points."cvd.sensors"]
arduino_tc_board = "cvd.legacy_sensors.arduino_tc_sensor:ArduinoTCSensor"
rs232 = "cvd.legacy_sensors.rs232_sensor:RS232Sensor"
mock_arduino_tc_board = "cvd.data_handler.sources.mock_sensors:MockArduinoTCSensor"
mock_rs232 = "cvd.data_handler.sources.mock_sensors:MockRS232Sensor"

[project.scripts]
cvd-alt-gui = "cvd.gui.alt_application:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
